Get rid of unneeded code.

--- a/web/.env
+++ b/web/.env
@@ -1,3 +1,3 @@
-VITE_AGORA_APP_ID=<YOUR_APP_ID>
-VITE_AGORA_APP_CERTIFICATE=<YOUR_APP_CERTIFICATE>
+VITE_AGORA_APP_ID=bd8c4af04e24463f829672bf632240d6
+VITE_AGORA_APP_CERTIFICATE=49da8e4f40474858afd78a9001774abb
 
